force-app/main/default/objects/Cart_Line_Item__c/Cart_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Cart Line Item</label>
    <nameField>
        <displayFormat>CTLI - {0000}</displayFormat>
        <label>Cart Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>