force-app/main/default/objects/Cart_Line_Item__c/fields/After_Disc_Price_Piece__c.field-meta.xml
<CustomField>
    <fullName>After_Disc_Price_Piece__c</fullName>
    <label>After Disc Price/Piece</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>