force-app/main/default/objects/Cart_Line_Item__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <label>Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>