force-app/main/default/objects/Cart_Line_Item__c/fields/Calculated_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Price__c</fullName>
    <label>Calculated Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>