force-app/main/default/objects/Cart_Line_Item__c/fields/Dis_Value__c.field-meta.xml
<CustomField>
    <fullName>Dis_Value__c</fullName>
    <label>Dis Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>