force-app/main/default/objects/Cart_Line_Item__c/fields/Item_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Item_Chosen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Chosen</label>
    <type>Checkbox</type>
</CustomField>