force-app/main/default/objects/Cart_Line_Item__c/fields/Price_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_Sqft__c</fullName>
    <label>Price/Sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>