force-app/main/default/objects/Cart_Line_Item__c/fields/Product_Tax__c.field-meta.xml
<CustomField>
    <fullName>Product_Tax__c</fullName>
    <label>Product Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>