force-app/main/default/objects/Cart_Line_Item__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>