force-app/main/default/objects/Cart_Line_Item__c/fields/Sales_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Confirmation</label>
    <referenceTo>Sales_Confirmation__c</referenceTo>
    <relationshipLabel>Cart Line Items</relationshipLabel>
    <relationshipName>Cart_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>