force-app/main/default/objects/Cart_Line_Item__c/fields/Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sqft__c</fullName>
    <label>Sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>