force-app/main/default/objects/Cart_Line_Item__c/fields/Without_Discount_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Without_Discount_Total_Price__c</fullName>
    <label>Without Discount Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>