force-app/main/default/objects/Cart_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>TOTO</value>
    </filters>
    <label>All</label>
</ListView>